--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "sms-management-api",
   "version": "1.0.0",
   "description": "this is an lm output 6.2",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/koechkevin/sms-management-api.git",
   "author": "Kevin Koech",
   "license": "MIT",
-  "private": false
+  "scripts": {
+    "transpile": "babel src --out-dir dist -s",
+    "build": "rm -rf dist && yarn transpile",
+    "start": "NODE_ENV=production node dist/index.js",
+    "start:dev": "NODE_ENV=development nodemon --exec babel-node src/index.js"
+  },
+  "private": false,
+  "dependencies": {
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/node": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
+  }
 }
