--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sms-management-api",
   "version": "1.0.0",
-  "description": "this is an lm output 6.2",
+  "description": "this is an lms output 6.2",
   "main": "src/index.js",
   "repository": "https://github.com/koechkevin/sms-management-api.git",
   "author": "Kevin Koech",
@@ -10,18 +10,27 @@
     "transpile": "babel src --out-dir dist -s",
     "build": "rm -rf dist && yarn transpile",
     "start": "NODE_ENV=production node dist/index.js",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "migrate": "node_modules/.bin/sequelize db:migrate",
+    "test": "NODE_ENV=test yarn migrate",
     "start:dev": "NODE_ENV=development nodemon --exec babel-node src/index.js"
   },
   "private": false,
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.9.4",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
-    "@babel/preset-env": "^7.5.0"
+    "@babel/preset-env": "^7.5.0",
+    "@babel/register": "^7.4.4",
+    "coveralls": "^3.0.4"
   }
 }
