--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "start": "NODE_ENV=production node dist/index.js",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "migrate": "node_modules/.bin/sequelize db:migrate",
-    "test": "NODE_ENV=test yarn migrate",
+    "test": "NODE_ENV=test yarn migrate && jest --forceExit --coverage",
     "start:dev": "NODE_ENV=development nodemon --exec babel-node src/index.js"
   },
   "private": false,
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.9.4",
-    "sequelize-cli": "^5.5.0"
+    "sequelize-cli": "^5.5.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
