--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": false,
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
