--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.9.4",
     "sequelize-cli": "^5.5.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
